Cập nhật lại chút, ẩn cái link github đi

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,7 +7,7 @@
     <ul class="navbar-nav mr-auto">
       {%- comment -%} {% include primary-nav.html data = site.data.nav%} {%- endcomment -%}
     </ul>
-    <a href="{{ site.repository }}" class="nav-link text-warning"><span class="fa fa-github"></span> Github</a>
+    <!-- <a href="{{ site.repository }}" class="nav-link text-warning"><span class="fa fa-github"></span> Github</a> -->
   </div>
   <!-- #myNavbar -->
 </nav>
