Sửa màu chữ chạy

--- a/index.scss
+++ b/index.scss
@@ -659,7 +659,7 @@
   }
   marquee{
   	line-height: 30px;
-	color: $navbar-default-brand-hover-color;
+	color: red;
 	font-size:12px;
 	font-weight: bold;
   }
